<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/input_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password1"
                android:inputType="textPassword"
                />
        <Button
            android:id="@+id/btn_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_account"
            />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        &lt;!&ndash;nombre&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_name"-->
<!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/input_name"-->
<!--            app:startIconDrawable="@drawable/ic_user"-->
<!--            android:layout_margin="16dp">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/input_name"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text"-->
<!--                android:paddingStart="50dp"-->
<!--                />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->


<!--        &lt;!&ndash;correo electronico&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_email"-->
<!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/input_email"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginTop="12dp"-->
<!--            app:startIconDrawable="@drawable/ic_email"-->
<!--            >-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/input_email"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:paddingStart="50dp"-->
<!--                />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        &lt;!&ndash;Contraseña&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_password"-->
<!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/input_password"-->
<!--            app:endIconMode="password_toggle"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginTop="12dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/input_password"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPassword"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        &lt;!&ndash;Repetir contraseña&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_password1"-->
<!--            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/input_password1"-->
<!--            app:endIconMode="password_toggle"-->
<!--            app:layout_constraintTop_toBottomOf="@id/til_password"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginTop="12dp">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/input_password1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPassword"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <Button-->
<!--            android:id="@+id/btn_account"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/btn_account"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/til_password1"-->
<!--            />-->
<!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>